--- a/ValidationPage/src/app/register/register.component.html
+++ b/ValidationPage/src/app/register/register.component.html
@@ -1,27 +1,40 @@
-<h2>Step 1</h2>
 <form [formGroup]="myform" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label>Username</label>
-      <input type="text" class="form-control" (click)="isClicked(username)" [ngClass]="{error: isAnError(username)}"
-        formControlName="username" required>
-      <div class="form-control-feedback" *ngIf="isAnError(username)">
-        <p>Username is required</p>
-      </div>
+  <h2>Step 1</h2>
+  <div class="form-group">
+    <label>Username</label>
+    <input type="text" class="form-control" 
+    [ngClass]="{error: myform.controls.username.errors.required && isSubmited}" 
+    formControlName="username"
+      required>
+    <div class="form-control-feedback" *ngIf="myform.controls.username.errors.required && isSubmited">
+      <p>Username is required</p>
     </div>
-    <div class="form-group">
-      <label>Password</label>
-      <input type="password" class="form-control" (click)="isClicked(password)" [ngClass]="{error: isAnError(password)}"
-        formControlName="password" required>
-      <div class="form-control-feedback" *ngIf="isAnError(password)">
-        <p *ngIf="password.errors.required ">Password is required</p>
-        <p *ngIf="password.errors.minlength">Password must be at least 6 characters long</p>
-        <p *ngIf="password.errors.maxlength">Password must be at most 8 characters long</p>
-      </div>
+  </div>
+  <div class="form-group">
+    <label>Email</label>
+    <input type="email" formControlName="email" [ngClass]="{error: myform.controls.email.errors.required && isSubmited}" required>
+    <div class="form-control-feedback" *ngIf="myform.controls.email.errors.required && isSubmited">
+      <p>Email is required</p>
     </div>
-    <mat-form-field>
-      <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-    <button type="submit" class="btn" (click)="isSubmited=true">Submit</button>
-  </form>
+  </div>
+  <div class="form-group">
+    <label>Password</label>
+    <input type="password" class="form-control" [ngClass]="{error: myform.controls.password.errors.required && isSubmited}" formControlName="password"
+      required>
+    <div class="form-control-feedback" *ngIf="myform.controls.password.errors && isSubmited">
+      <p *ngIf="myform.controls.password.errors.required ">Password is required</p>
+      <p *ngIf="myform.controls.password.errors.minlength">Password must be at least 6 characters long</p>
+      <p *ngIf="myform.controls.password.errors.maxlength">Password must be at most 8 characters long</p>
+    </div>
+  </div>
+  <div class="form-group">
+    <label>Confirm</label>
+    <input type="password" class="form-control" [ngClass]="{error: myform.controls.confirm.errors.required && isSubmited}" formControlName="confirm" required>
+    <div class="form-control-feedback" *ngIf="myform.controls.confirm.errors.required && isSubmited">
+      <p>Entern the correct password</p>
+    </div>
+  </div>
+  <div class="button">
+    <button type="submit" class="btn" (click)="isSubmited=true">Next</button>
+  </div>
+</form>
