--- a/ValidationPage/src/app/add-card/add-card.component.html
+++ b/ValidationPage/src/app/add-card/add-card.component.html
@@ -1,31 +1,12 @@
 <div class="card-container">
   <form [formGroup]="addForm" (ngOnSubmit)="onSubmit()">
     <div class="btn-container">
-      <button (click)="openCard=true">Add Credit Card</button>
-      <div class="card-content" *ngIf="openCard">
-        <div class="input">
-          <label>Card Number</label>
-          <input type="number" formControlName="cardNumber" required>
-          <div class="error"
-            *ngIf="(addform.get('cardNumber').hasError() && (addform.get('cardNumber').dirty || addform.get('cardNumber').touched)) && isSubmited">
-            <p>error</p>
-          </div>
-        </div>
-        <div class="input">
-          <label>Card Owner</label>
-          <input type="text" formControlName="owner" required>
-        </div>
-        <div class="input">
-          <label>Cvv Number</label>
-          <input type="number" formControlName="cvv" required>
-        </div>
-        <div class="input">
-          <label>Expiration Date</label>
-          <input type="number" formControlName="expiration" required>
-        </div>
+      <button (click)="addCard()">Add Credit Card</button>
+      <div *ngFor="let item of cardList">
+        <app-card-list></app-card-list>
       </div>
     </div>
-    <div class="btn-container" >
+    <div class="btn-container">
       <button (click)="openBilling=true">Add Billing Address</button>
       <div class="card-content" *ngIf="openBilling">
         <div class="input">
