--- a/ValidationPage/src/app/app.component.html
+++ b/ValidationPage/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-register *ngIf="registerActive" (rIsActive)="displayRegister($event)"></app-register>
 <app-add-card *ngIf="addCardActive" (cIsActive) = "displayAddCard($event)"></app-add-card>
-<app-subscribe *ngIf="subscribeActive" (cIsActive) = "displaySubscribe($event)"></app-subscribe>
+<app-subscribe *ngIf="subscribeActive" (sIsActive) = "displaySubscribe($event)"></app-subscribe>
