--- a/ValidationPage/src/app/register/register.component.css
+++ b/ValidationPage/src/app/register/register.component.css
@@ -1,23 +1,41 @@
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+  font-family: sans-serif;
 }
 
-.form-group{
-    display: inherit;
-    flex-direction: column;
-}
-.btn{
-flex-direction: flex-end;
-}
-
-.button{
-    display: flex;
+.form-group {
+  display: inherit;
+  flex-direction: column;
+  margin: 10px;
+  font-size: 20px;
 }
 
+.btn {
+  flex-direction: flex-end;
+}
 
-p{
-    color: red;
+.button {
+  display: flex;
+}
+
+button {
+    background-color: #7575a3;
+    border: none;
+    padding: 10px 20px;
+    color: white;
+    font-size: 20px;
+}
+
+p {
+  color: red;
+  font-size: 15px;
+}
+
+input {
+  border-radius: 8px;
+  border: 1px solid grey;
+  padding: 10px;
 }
