--- a/ValidationPage/src/app/register/register.component.html
+++ b/ValidationPage/src/app/register/register.component.html
@@ -2,25 +2,22 @@
   <h2>Step 1</h2>
   <div class="form-group">
     <label>Username</label>
-    <input type="text" class="form-control" 
-    [ngClass]="{error: myform.controls.username.errors.required && isSubmited}" 
-    formControlName="username"
-      required>
-    <div class="form-control-feedback" *ngIf="myform.controls.username.errors.required && isSubmited">
+    <input type="text" class="form-control" formControlName="username">
+    <div class="form-control-feedback" *ngIf="myform.controls.username.errors?.required && isSubmited">
       <p>Username is required</p>
     </div>
   </div>
   <div class="form-group">
     <label>Email</label>
-    <input type="email" formControlName="email" [ngClass]="{error: myform.controls.email.errors.required && isSubmited}" required>
-    <div class="form-control-feedback" *ngIf="myform.controls.email.errors.required && isSubmited">
-      <p>Email is required</p>
+    <input type="email" formControlName="email"  required>
+    <div class="form-control-feedback" *ngIf="myform.controls.email.errors && isSubmited">
+      <p *ngIf="myform.controls.email.errors.required">Email is required</p>
+      <p *ngIf="myform.controls.email.errors.pattern">Please enter a valid email</p>
     </div>
   </div>
   <div class="form-group">
     <label>Password</label>
-    <input type="password" class="form-control" [ngClass]="{error: myform.controls.password.errors.required && isSubmited}" formControlName="password"
-      required>
+    <input type="password" class="form-control" formControlName="password" required>
     <div class="form-control-feedback" *ngIf="myform.controls.password.errors && isSubmited">
       <p *ngIf="myform.controls.password.errors.required ">Password is required</p>
       <p *ngIf="myform.controls.password.errors.minlength">Password must be at least 6 characters long</p>
@@ -29,9 +26,10 @@
   </div>
   <div class="form-group">
     <label>Confirm</label>
-    <input type="password" class="form-control" [ngClass]="{error: myform.controls.confirm.errors.required && isSubmited}" formControlName="confirm" required>
-    <div class="form-control-feedback" *ngIf="myform.controls.confirm.errors.required && isSubmited">
-      <p>Entern the correct password</p>
+    <input type="password" class="form-control" formControlName="confirm" required>
+    <div class="form-control-feedback" *ngIf="myform.controls.confirm.errors && isSubmited">
+      <p *ngIf="myform.controls.confirm.errors.required">Password is required</p>
+      <p *ngIf="myform.controls.confirm.errors?.MatchPassword">The password does not match</p>
     </div>
   </div>
   <div class="button">
