--- a/ValidationPage/src/app/add-card/add-card.component.html
+++ b/ValidationPage/src/app/add-card/add-card.component.html
@@ -1,9 +1,9 @@
 <div class="card-container">
-  <form [formGroup]="addForm" (ngOnSubmit)="onSubmit()">
+  <form [formGroup]="addForm" (ngSubmit)="onSubmit()" (isValid)="childIsValid($event)">
     <div class="btn-container">
       <button (click)="addCard()">Add Credit Card</button>
       <div *ngFor="let item of cardList">
-        <app-card-list></app-card-list>
+        <app-card-list [isSubmited]="isSubmited"></app-card-list>
       </div>
     </div>
     <div class="btn-container">
@@ -11,19 +11,35 @@
       <div class="card-content" *ngIf="openBilling">
         <div class="input">
           <label>City</label>
-          <input type="text" formControlName="city" required>
+          <input type="text" formControlName="city" >
+          <div *ngIf="addForm.controls.city.errors && isSubmited">
+            <p *ngIf="addForm.controls.city.errors.required">City is required</p>
+          </div>
+          
         </div>
         <div class="input">
           <label>Street</label>
-          <input type="text" formControlName="street" required>
+          <input type="text" formControlName="street">
+          <div *ngIf="addForm.controls.street.errors && isSubmited">
+            <p *ngIf="addForm.controls.street.errors.required">Street is required</p>
+
+          </div>
         </div>
         <div class="input">
           <label>Apartment</label>
-          <input type="text" formControlName="apartment" required>
+          <input type="text" formControlName="apartment" >
+          <div *ngIf="addForm.controls.apartment.errors && isSubmited">
+            <p *ngIf="addForm.controls.apartment.errors.required">Apartment is required</p>
+
+          </div>
         </div>
         <div class="input">
           <label>Phone Number</label>
-          <input type="number" formControlName="phoneNumber" required>
+          <input type="number" formControlName="phoneNumber">
+          <div *ngIf="addForm.controls.phoneNumber.errors && isSubmited">
+            <p *ngIf="addForm.controls.phoneNumber.errors.required">Phone number is required</p>
+
+          </div>
         </div>
       </div>
     </div>
