--- a/ValidationPage/src/app/subscribe/subscribe.component.html
+++ b/ValidationPage/src/app/subscribe/subscribe.component.html
@@ -1,17 +1,20 @@
 <form [formGroup]="subscribe" (ngSubmit)="onSubmit()">
-  <div>
-      <input id="subscribe" type="radio" name="radio-name" formControlName="email" (click)="isChecked=true">Subscribe<br>
-  </div> 
-  <div class="sub-email" *ngIf="isChecked">
-    <label>Please enter your email</label>
-    <input  type="email"><br>
-  </div>  
-  <div>
-      <input type="radio" name="radio-name" (click)="isChecked=false">Later
-  </div>
-  <div class="buttons">
-    <button>Back</button>
-    <button type="submit">Submit</button> 
-  </div> 
-  
+    <div>
+        <input type="radio" formControlName="category" name="category" value="subscribe">Subscribe<br>
+    </div>
+    <div class="sub-email">
+        <label>Please enter your email</label>
+        <input type="email" formControlName="email"><br>
+        <div *ngIf="subscribe.controls.email.errors && isSubmited">
+            <p *ngIf="subscribe.controls.email.errors.required">Email is required</p>
+            <p *ngIf="subscribe.controls.email.errors.email">Please enter a valid email</p>
+        </div>
+    </div>
+    <div>
+        <input type="radio" formControlName="category" name="category" value="later">Later
+    </div>
+    <div class="buttons">
+        <button (click)="goBack()">Back</button>
+        <button type="submit" (click)="isSubmited=true">Submit</button>
+    </div>
 </form>
