--- a/ValidationPage/src/app/card-list/card-list.component.css
+++ b/ValidationPage/src/app/card-list/card-list.component.css
@@ -1,33 +1,55 @@
-.card-container{
+.card-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 100px;
-
 }
-.btn-container{
+
+.btn-container {
     margin: 20px;
 }
-.nav-btn{
+
+.nav-btn {
     display: flex;
     justify-content: space-between
 }
 
-.input{
+.input {
     display: flex;
     flex-direction: column;
     margin: 10px;
+    font-family: sans-serif;
+    font-size: 20px;
 }
-p{
+
+p {
     color: red;
 }
-.small{
+
+.small {
     display: flex;
     flex-direction: row;
 }
-.smin{
+
+.smin {
     width: 50px;
 }
-form{
+
+form {
     border-bottom: 1px solid grey;
+}
+
+button {
+    background-color: #7575a3;
+    border-style: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    color: white;
+    font-size: 20px;
+}
+
+input {
+    border-radius: 8px;
+    border: 1px solid grey;
+    padding: 10px;
 }
